# bot_habits

./: .example.env  Dockerfile  DockerfileBot  DockerfileFastAPI  README.md  alembic.ini  bot.py  check.py  docker-compose.yml  loader.py  main.py  some.py
backend/: routers.py  run_fastapi.py
config/: async_database.py  environments.py  sync_database.py
database/: core.py  dao.py  models.py
dotinputs/: buttons.py  states.py
dotinputs/database/: __init__.py  dao.py  models.py
dotinputs/handlers/: __init__.py  handle_habits.py  handle_registration.py  main_handlers.py  utils.py
dotinputs/scheduler/: core.py  handle_schedule.py
fast_app/: main.py
fast_app/backend/: routers.py  run_fastapi.py
fast_app/backend/auth/: auth_routers.py  hashing.py  jwt_token.py
fast_app/database/: core.py  dao.py  models.py
fast_app/shemases/: __init__.py  shemases.py
migrations/: env.py
migrations/versions/: 4c9c14670dbf_.py  ba9401dcb3cb_.py
requirements/bot/: pyproject.toml
requirements/fast_api/: pyproject.toml
shemases/: shemases.py
