[tool.poetry]
name = "bot"
version = "0.1.0"
description = "telegram bot tracking habits"
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytelegrambotapi = "^4.21.0"
pydantic-settings = "2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
