[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "backend for telegram bot tracking habits"
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "2.0.31"
asyncpg = "0.29.0"
fastapi = "0.111.0"
uvicorn = "0.30.1"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
httpx = "0.27.0"
pydantic-core = "2.20.1"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
